--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM OPENJDK:11 AS BUILD_IMAGE
+FROM openjdk:11 AS BUILD_IMAGE
 RUN apt update && apt install maven -y
 RUN git clone https://github.com/nehamalii/vprofile-project.git
 RUN cd vprofile-project && git checkout docker && mvn install
@@ -6,7 +6,7 @@ RUN cd vprofile-project && git checkout docker && mvn install
 FROM tomcat:9-jre11
 LABEL "Project"="vprofile"
 LABEL "Author"="Neha"
-RUN rf -rf /usr/local/tomcat/webapps/*
+RUN rm -rf /usr/local/tomcat/webapps/*
 COPY --from=BUILD_IMAGE vprofile-project/target/vprofile-v2.war /usr/local/tomcat/webapps/ROOT.war
 EXPOSE 8080
 CMD ["catalina.sh", "run"] 
